# swatchify

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: generate.rs
src/helpers/: fs.rs
templates/: parameters.json  swatch.scad
