[package]
name = "swatchify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
csv = "1.2.0"
indicatif = { version = "0.17.3", features = ["rayon"] }
maplit = "1.0.2"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.4.0"
thiserror = "1.0.39"
walkdir = "2.3.2"
